fixed navigation spacing and borders

--- a/css/index.css
+++ b/css/index.css
@@ -243,42 +243,51 @@ footer {
 
     header {
         flex-wrap: wrap;
-        height: 100%;
-        width: 100%;
+        justify-content: center;
     }
 
     header nav {
-        width: 93%;
+        width: 100%;
         flex-direction: column;
+        display: flex;
+        margin: 0;
         align-items: center;
-        justify-content: center;
-        text-align: center;
-        font-size: 24px;
-        margin-top: 5px;
     }
 
     header nav a {
-        border: 1px solid black;
-        width: 398px;
-        height: 50px;
-        align-items: center;
+         margin: 0;
+        display: block;
+        text-align: center;
+        padding: 20px 0;
+        font-size: 20px;
+        width: 100%;
+        border-bottom: 1px solid grey;
     }
 
     header .logo {
-        align-self: flex-end;
+        max-width: 100%;
+        margin: 20px 0;
         order: -1;
     }
 
      /* Call To Action (CTA) Styles */
      .cta {
+         margin-top: 50px;
          display: flex;
          flex-direction: column;
-         justify-content: center;
          align-items: center;
+     }
+
+     .cta .cta-text {
+         margin: 0 0 50px 0;
      }
 
      .cta .cta-text button {
          margin-bottom: 20px;
+     }
+
+     .cta img {
+         max-width: 80%;
      }
 
      /* Main Content Styles */
